# cautious-computing-machine

./: README.md  pyproject.toml
.github/workflows/: run-tests.yaml
cautious_computing_machine/: calculator.py
tests/: test_calculator.py
